fix : onboarding
